--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Welcome!</title>
+    <title>Welcome to EAES 494!</title>
     <meta charset="utf-8" />
-    <meta name="author" content="datasciencebox.org" />
+    <meta name="author" content="Gavin McNicol" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
@@ -16,9 +16,9 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Welcome!
-## <br><br> Data Science in a Box
-### <a href="https://datasciencebox.org/">datasciencebox.org</a>
+# Welcome to EAES 494!
+## <br><br> Data Science &amp; Statistics
+### <a href="https://github.com/gavinmcnicol">Gavin McNicol</a>
 
 ---
 
