updated yaml in week 1 slide decks and updated course README (still need to finish)

--- a/slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
+++ b/slides/u1-d03-toolkit-git/u1-d03-toolkit-git.html
@@ -3,7 +3,7 @@
   <head>
     <title>Meet the toolkit: version control and collaboration</title>
     <meta charset="utf-8" />
-    <meta name="author" content="datasciencebox.org" />
+    <meta name="author" content="Gavin McNicol" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
     <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
@@ -17,8 +17,8 @@
 class: center, middle, inverse, title-slide
 
 # Meet the toolkit:<br>version control and collaboration
-## <br><br> Data Science in a Box
-### <a href="https://datasciencebox.org/">datasciencebox.org</a>
+## <br><br> Data Science &amp; Statistics
+### <a href="https://github.com/gavinmcnicol">Gavin McNicol</a>
 
 ---
 
