updated welcome introduction slide

--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -40,7 +40,10 @@ layout: true
 
 class: middle
 
-# Hello world!
+# Gavin McNicol
+McNicol Lab @ UIC
+
+&lt;img src="img/gavin-headshot.jpeg" width="30%" style="display: block; margin: auto auto auto 0;" /&gt;
 
 ---
 
