updated intro slide text

--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -40,7 +40,7 @@ layout: true
 
 class: middle
 
-# Gavin McNicol
+# Dr. Gavin McNicol
 McNicol Lab @ UIC
 
 &lt;img src="img/gavin-headshot.jpeg" width="30%" style="display: block; margin: auto auto auto 0;" /&gt;
@@ -70,6 +70,9 @@ A - While statistics `\(\ne\)` data science, they are very closely related and h
 
 **Q - Will we be doing computing?**   
 A - Yes.
+
+**Q - Will we be working with EaESy Data?**   
+A - *Yes!*
 ]
 
 ---
