adeed new images for slides/u1-d01-welcome

--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -98,6 +98,14 @@ class: middle
 
 ---
 
+&lt;img src="img/npctr.png" width="75%" style="display: block; margin: auto auto auto 0;" /&gt;
+
+---
+
+&lt;img src="img/pedons.png" width="75%" style="display: block; margin: auto auto auto 0;" /&gt;
+
+---
+
 &lt;img src="img/excel.png" width="75%" style="display: block; margin: auto auto auto 0;" /&gt;
 
 ---
@@ -141,7 +149,7 @@ class: middle
 ---
 
 .pull-left[
-&lt;img src="img/google-trend-index.png" width="75%" style="display: block; margin: auto auto auto 0;" /&gt;
+&lt;img src="img/google-trend-index.png" width="100%" style="display: block; margin: auto auto auto 0;" /&gt;
 ]
 .pull-right[
 &lt;img src="img/data-science-cycle/data-science-cycle.006.png" width="90%" style="display: block; margin: auto 0 auto auto;" /&gt;
