finished u1-d01-welcome slide deck

--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -189,7 +189,7 @@ class: middle
 
 ---
 
-&lt;img src="img/unvotes/unvotes.gif" width="85%" style="display: block; margin: auto auto auto 0;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions.gif" width="85%" style="display: block; margin: auto auto auto 0;" /&gt;
 
 ---
 
@@ -199,95 +199,91 @@ class: middle
 
 ---
 
-background-image: url("img/unvotes/unvotes-01.jpeg")
+&lt;img src="img/carbon-emissions/carbon-emissions-01.gif" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-02.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-02.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-03.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-03.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-04.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-04.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-05.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-05.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-06.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-06.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-07.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-07.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-08.jpeg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-08.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-09.jpeg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-09.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-10.jpeg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-10.png" width="60%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-11.jpeg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-11.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-12.jpeg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-12.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 class: inverse
 
-&lt;img src="img/unvotes/unvotes-13.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
-
----
-
-class: inverse
-
-&lt;img src="img/unvotes/unvotes-14.jpeg" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-13.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 
 .center[
 .large[
-[minecr.shinyapps.io/unvotes](https://minecr.shinyapps.io/unvotes/)
+Now, your turn!
+
+Open the **exercise-01 carbon emissions** project in RStudio Cloud!
 ]
 ]
 
-&lt;img src="img/unvotes/unvotes-15.png" width="65%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-14.png" width="60%" style="display: block; margin: auto;" /&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
