removed large .gif files from u1-d01-welcome deck

--- a/slides/u1-d01-welcome/u1-d01-welcome.html
+++ b/slides/u1-d01-welcome/u1-d01-welcome.html
@@ -9,8 +9,8 @@
     <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
-    <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
-    <link rel="stylesheet" href="../slides.css" type="text/css" />
+    <link rel="stylesheet" href="/Users/gavin/Documents/Teaching/EAES 494/course-materials/slides/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="/Users/gavin/Documents/Teaching/EAES 494/course-materials/slides/slides.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -189,7 +189,7 @@ class: middle
 
 ---
 
-&lt;img src="img/carbon-emissions/carbon-emissions.gif" width="85%" style="display: block; margin: auto auto auto 0;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions.png" width="85%" style="display: block; margin: auto auto auto 0;" /&gt;
 
 ---
 
@@ -199,7 +199,7 @@ class: middle
 
 ---
 
-&lt;img src="img/carbon-emissions/carbon-emissions-01.gif" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/carbon-emissions/carbon-emissions-01.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 
