--- a/exercises/e-02-weather-check/weather-check.html
+++ b/exercises/e-02-weather-check/weather-check.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Gavin McNicol" />
 
-<meta name="date" content="2021-06-04" />
+<meta name="date" content="2021-07-24" />
 
 <title>Weather Check</title>
 
@@ -243,7 +243,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Weather Check</h1>
 <h4 class="author">Gavin McNicol</h4>
-<h4 class="date">2021-06-04</h4>
+<h4 class="date">2021-07-24</h4>
 
 </div>
 
@@ -330,7 +330,6 @@ library(tidyverse)</code></pre>
 #        mapping = aes(x = weather_source, y = weather_source_count, color = ___)) +
 #   geom_point() +
 #   labs(title = &quot;Weather source vs. age&quot;,
-#        subtitle = &quot;___&quot;, 
 #        x = &quot;Weather source&quot;,
 #        y = &quot;___&quot;,
 #        color = &quot;age&quot;) +
@@ -375,6 +374,9 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
 
     // move toc-ignore selectors from section div to header
     $('div.section.toc-ignore')
