added pipe shortcut slide to grammar-wrangle

--- a/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.html
+++ b/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.html
@@ -628,6 +628,13 @@ ggplot(catch_data, aes(x = region, y = values)) +
 
 ---
 
+## Pipe Keyboard Shortcut
+
+Windows - Cntrl + Shift + M
+Mac - Command + Shift + M
+
+---
+
 .center[
 .large[
 This class content was built from the Data Science in a Box source materials.
