fixed typos in d06 and d07

--- a/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.html
+++ b/slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.html
@@ -630,8 +630,9 @@ ggplot(catch_data, aes(x = region, y = values)) +
 
 ## Pipe Keyboard Shortcut
 
-Windows - Cntrl + Shift + M
-Mac - Command + Shift + M
+  **Windows** - Cntrl + Shift + M
+
+  **Mac** - Command + Shift + M
 
 ---
 
