completed lab03 rubric through exercerise 2

--- a/starters/lab/lab-03-great-lakes-fish-stock-starter/lab-03-rubric.html
+++ b/starters/lab/lab-03-great-lakes-fish-stock-starter/lab-03-rubric.html
@@ -184,7 +184,19 @@ pre code {
 </div>
 <div id="exercise-2" class="section level3">
 <h3>Exercise 2</h3>
-<p>Remove this text, and add your answer for Exercise 2 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
+<pre><code>## Warning: One or more parsing issues, see `problems()` for details</code></pre>
+<pre class="r"><code>glimpse(salmon_stock)</code></pre>
+<pre><code>## Rows: 5,131
+## Columns: 8
+## $ YEAR       &lt;dbl&gt; 1987, 1987, 1987, 1987, 1987, 1987, 1987, 1987, 1987, 1987,…
+## $ MONTH      &lt;dbl&gt; 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 3, 3, 3, 3, 3,…
+## $ LAKE       &lt;chr&gt; &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;, &quot;ER&quot;,…
+## $ STATE_PROV &lt;chr&gt; &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;, &quot;PA&quot;,…
+## $ SPECIES    &lt;chr&gt; &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;COS&quot;, &quot;CO…
+## $ NO_STOCKED &lt;dbl&gt; 10000, 3136, 45000, 25000, 25000, 121449, 25000, 25000, 980…
+## $ AGEMONTH   &lt;dbl&gt; 15, 15, 16, 16, 15, NA, 16, 15, 15, 16, 16, 16, 16, 17, 5, …
+## $ WEIGHT     &lt;dbl&gt; 500.05, 112.68, 2556.82, 650.47, 1217.97, 4547.29, 655.34, …</code></pre>
+<p>The new data frame <code>salmon_stock</code> contains 5,131 rows, 8 columns (variables). YEAR, MONTH, NO_STOCKED, AGEMONTH and WEIGHT are numerical. LAKE, STATE_PROV, SPECIES are character strings.</p>
 </div>
 <div id="exercise-3" class="section level3">
 <h3>Exercise 3</h3>
