--- a/starters/lab/lab-03-great-lakes-fish-stock-starter/lab-03.html
+++ b/starters/lab/lab-03-great-lakes-fish-stock-starter/lab-03.html
@@ -192,15 +192,15 @@ pre code {
 </div>
 <div id="exercise-4" class="section level3">
 <h3>Exercise 4</h3>
-<p>…</p>
+<p>Remove this text, and add your answer for Exercise 4 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
 </div>
 <div id="exercise-5" class="section level3">
 <h3>Exercise 5</h3>
-<p>…</p>
+<p>Remove this text, and add your answer for Exercise 5 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
 </div>
 <div id="exercise-6" class="section level3">
 <h3>Exercise 6</h3>
-<p>…</p>
+<p>Remove this text, and add your answer for Exercise 6 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
 </div>
 </div>
 
