--- a/slides/u1-3-review/u2-review-starter-TEST.html
+++ b/slides/u1-3-review/u2-review-starter-TEST.html
@@ -183,6 +183,11 @@ solubility_hardness &lt;- read_csv(&quot;data/solubility-hardness.csv&quot;)</co
 <h2>Exercises</h2>
 <div id="exercise-1" class="section level3">
 <h3>Exercise 1</h3>
+<pre class="r"><code>glimpse(sand_minerals)</code></pre>
+<pre><code>## Rows: 23
+## Columns: 2
+## $ location &lt;dbl&gt; 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 5, 6, 6, 6, 7, 7, 7, 8, 8, 9, 1…
+## $ minerals &lt;chr&gt; &quot;Quartz&quot;, &quot;Feldspar&quot;, &quot;Quartz&quot;, &quot;Feldspar&quot;, &quot;Quartz&quot;, &quot;Feldsp…</code></pre>
 </div>
 <div id="exercise-2" class="section level3">
 <h3>Exercise 2</h3>
