--- a/slides/u1-3-review/u2-review-starter-TEST.html
+++ b/slides/u1-3-review/u2-review-starter-TEST.html
@@ -188,6 +188,7 @@ solubility_hardness &lt;- read_csv(&quot;data/solubility-hardness.csv&quot;)</co
 ## Columns: 2
 ## $ location &lt;dbl&gt; 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 5, 6, 6, 6, 7, 7, 7, 8, 8, 9, 1…
 ## $ minerals &lt;chr&gt; &quot;Quartz&quot;, &quot;Feldspar&quot;, &quot;Quartz&quot;, &quot;Feldspar&quot;, &quot;Quartz&quot;, &quot;Feldsp…</code></pre>
+<p>There are 23 rows and 2 columns (variables).</p>
 </div>
 <div id="exercise-2" class="section level3">
 <h3>Exercise 2</h3>
