finalized part 2 of unit 1-3 review

--- a/slides/u1-3-review/u1-u2-u3-review-starter.html
+++ b/slides/u1-3-review/u1-u2-u3-review-starter.html
@@ -206,6 +206,22 @@ solubility_hardness &lt;- read_csv(&quot;data/solubility-hardness.csv&quot;)</co
 <p>Remove this text, and add your answer for Exercise 6 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
 </div>
 </div>
+<div id="part-ii---data-visualization" class="section level2">
+<h2>Part II - Data Visualization</h2>
+<p><code>starwars</code> is already loaded within the <code>dplyr</code> package (within <code>tidyverse</code>)</p>
+<div id="exercise-7" class="section level3">
+<h3>Exercise 7</h3>
+<p>Remove this text, and add your answer for Exercise 6 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
+</div>
+<div id="exercise-8" class="section level3">
+<h3>Exercise 8</h3>
+<p>Remove this text, and add your answer for Exercise 6 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
+</div>
+<div id="exercise-9" class="section level3">
+<h3>Exercise 9</h3>
+<p>Remove this text, and add your answer for Exercise 6 here. Add code chunks as needed. Don’t forget to label your code chunk. Do not use spaces in code chunk labels.</p>
+</div>
+</div>
 
 
 
