fixed typo in lab and homework 4

--- a/labs/lab-04-type-coercion/lab-04-type-coercion.html
+++ b/labs/lab-04-type-coercion/lab-04-type-coercion.html
@@ -253,7 +253,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ol start="7" style="list-style-type: decimal">
 <li><p>Write and label a code chunk below exercise 7 in your starter file that gives you a “glimpse” of the <code>earthquakes</code> dataset.</p></li>
 <li><p>Under exercise 8, state which of the variables could be explicitly coerced to new data types, without any loss of information. Try to identify at least two.</p></li>
-<li><p>What problems would this coercion cause if we tried to recreate the plot from Homework 1 which mapped year to the x-axis and magnitude to the y-axis?</p></li>
+<li><p>If we coerced <code>year</code> to type character, what visualization problems may arise if we tried to recreate the plot from Homework 1 which mapped <code>year</code> to the x-axis and <code>richter</code> to the y-axis?</p></li>
 </ol>
 <p>🧶 ✅ ⬆️ Knit, <em>commit, and push your changes to GitHub with an appropriate commit message.</em></p>
 <ol start="10" style="list-style-type: decimal">
