--- a/starters/lab/lab-04-type-coercion-starter/lab-04-rubric.html
+++ b/starters/lab/lab-04-type-coercion-starter/lab-04-rubric.html
@@ -304,12 +304,12 @@ library(tidyverse)</code></pre>
 <div id="exercise-8" class="section level3">
 <h3>Exercise 8</h3>
 <p><strong>Half point for two correct (MAX 0.5)</strong></p>
-<p><code>year</code> or <code>richter</code> or <code>day</code> or <code>deaths</code> could be coerced to character, or <code>day</code> or <code>year</code> or <code>deaths</code> could be coerced to <code>integer</code> with no information loss.</p>
+<p><code>day</code> or <code>year</code> or <code>deaths</code> could be coerced to <code>integer</code> with no information loss.</p>
 </div>
 <div id="exercise-9" class="section level3">
 <h3>Exercise 9</h3>
 <p><strong>Half point for correct prediction (MAX 0.5)</strong></p>
-<p>The ordering may be wrong on the x-axis because the years are not treated as sequential numbers, they will be treated as character string categories.</p>
+<p>If <code>year</code> were coerced to character, the ordering may be wrong on the x-axis because the years are not treated as sequential numbers, they will be treated as character string categories.</p>
 </div>
 <div id="exercise-10" class="section level3">
 <h3>Exercise 10</h3>
