finished unit 5 lab and first slides

--- a/starters/lab/lab-05-import-recode-starter/lab-05.html
+++ b/starters/lab/lab-05-import-recode-starter/lab-05.html
@@ -176,7 +176,8 @@ pre code {
 <pre class="r"><code>library(tidyverse)
 library(readxl)
 library(openintro)
-library(skimr)</code></pre>
+library(skimr)
+library(janitor)</code></pre>
 </div>
 <div id="exercises" class="section level2">
 <h2>Exercises</h2>
@@ -214,7 +215,11 @@ library(skimr)</code></pre>
 </div>
 <div id="exercise-9" class="section level3">
 <h3>Exercise 9</h3>
-<p>Remove this text, and add your answer for Exercise 9 here.</p>
+<p>Remove this text, and add your answer for Exercise 8 here.</p>
+</div>
+<div id="exercise-10" class="section level3">
+<h3>Exercise 10</h3>
+<p>Remove this text, and add your answer for Exercise 8 here.</p>
 </div>
 </div>
 
